deps/v8/test/message/fail/class-field-static-prototype.out
*%(basename)s:8: SyntaxError: Classes may not have a static property named 'prototype'
  static prototype = function() {};
         ^^^^^^^^^
SyntaxError: Classes may not have a static property named 'prototype'